// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input tests should return content when value is boolean (false) 1`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is boolean (true) 1`] = `
<div>
  case 6
</div>
`;

exports[`input tests should return content when value is number 1`] = `
<div>
  case 3
</div>
`;

exports[`input tests should return content when value is string 1`] = `
<div>
  case 4
</div>
`;

exports[`misc tests should return content from first occurence when multiple matches 1`] = `
<div>
  case 3
</div>
`;

exports[`with default case should return content from first case 1`] = `
<div>
  case 0
</div>
`;

exports[`with default case should return content from second case 1`] = `
<div>
  case 1
</div>
`;

exports[`with default case should return content from third case 1`] = `
<div>
  case 2
</div>
`;

exports[`with default case should return null 1`] = `
<div>
  default
</div>
`;

exports[`without default case should return content from first case 1`] = `
<div>
  case 0
</div>
`;

exports[`without default case should return content from second case 1`] = `
<div>
  case 1
</div>
`;

exports[`without default case should return content from third case 1`] = `
<div>
  case 2
</div>
`;

exports[`without default case should return null 1`] = `null`;
